--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "jquery-mousewheel": ">=3.1.0"
   },
   
-  "main": [
-    "lib/jquery.simplr.smoothscroll.min.js"
-  ],
+  "main": "lib/jquery.simplr.smoothscroll.min.js",
 
   "ignore": [
     "examples"
